.kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: training-api
  labels:
    app: training-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: training-api
  template:
    metadata:
      labels:
        app: training-api
    spec:
      containers:
        - name: training-api
          image: makingsenseinfo/training-api:1.0.4
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: '256Mi'
              cpu: '200m'
            limits:
              memory: '512Mi'
              cpu: '500m'
