.kubernetes/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: training-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: training-api.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: training-api-service
                port:
                  number: 80
